--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,10 @@ drawbridge - changelog
 + add arbitrary port mappings feature
 + add a help screen
 
+[0.0.18]
++ Allows using the application even if router can not report public IP
++ Removes overly verbose system event code
+
 [0.0.17]
 Fix connection icon not returning to green after connection restored
 
